Introduce rough scratch-pad

--- a/scratch_pad/untitled.ipynb
+++ b/scratch_pad/untitled.ipynb
@@ -3066,6 +3066,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e6c560b",
+   "metadata": {},
+   "source": [
+    "Thank you very much for your availability to mentor me. I am currently working on model compression (Pruning and Quantization) for LLMs and Automatic Speech Recognition (ASR) models, and compilation of the compressed models for efficient inference on GPUs. I am interested in the efficient inference of deep learning models, and I have been exploring model compression and compilation. \n",
+    "\n",
+    "Your mentorship would be highly valuable as I navigate this research area. I also intend to apply "
+   ]
   }
  ],
  "metadata": {
